--- a/src/App.css
+++ b/src/App.css
@@ -61,7 +61,13 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: flex-start;
+  justify-self: space-around;
+  width: auto;
+  padding-left: 4rem;
+}
+.listContainer {
+  width: 100vw;
 }
 
 #terminarCompra {
