--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@
 .App {
   text-align: center;
 }
+*{
+  
+  margin: 0px;
+  padding: 0px;
+}
 body {
   overflow-x: hidden;
 }
@@ -184,6 +189,10 @@ section {
   padding-left: 1rem;
   padding-top: 6rem;
   margin-top: 0rem;
+}
+section#productos {
+  padding: 0px;
+  margin: 0px;
 }
 section#hero {
   height: 95vh;
